--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,4 +1,8 @@
 {
-  "Welcome": "Welcome",
-  "A brand new app.": "A brand new app."
+	"Welcome": "Добро пожаловать",
+	"A brand new app.": "Совершенно новое приложение.",
+	"Reviews": "Отзывы",
+	"Contact": "Связаться",
+	"How to find us": "Как нас найти",
+	"Central office": "Центральный офис"
 }
